Bug 51543 - UI: incomplete slide number info in status bar
Summary: UI: incomplete slide number info in status bar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: All All
: medium minor
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-28 22:19 UTC by Jean-Baptiste Faure
Modified: 2012-06-29 01:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screen copy of slide number in the status bar (12.73 KB, image/png)
2012-06-28 22:19 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2012-06-28 22:19:48 UTC
Created attachment 63585 [details]
screen copy of slide number in the status bar

Steps to reproduce:
- open some odp file in LO 3.6 beta : the slide number field in the status bar shows something like "slide / B"
- click on a slide in the slide pane (left pane) -> the slide number becomes correct like "slide 2 / 66" if 66 is the total count of slides
- click back on the slide to modify it and the slide number becomes wrong again.

Version 3.6.0.0.beta2+ (Build ID: 55d095a)
Ubuntu 11.10 x86_64 with gnome-shell

Best regards. JBF
Comment 1 Rainer Bielefeld Retired 2012-06-28 23:14:50 UTC
Reproducible with WIN 3.6.0.0.beta1 and 
Already [Reproducible] with Server installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 7175cee]" (tinderbox: Win-x86@6-fast, pull time 2012-05-16 22:07:37)

For me status bar shows "Slide / ", but I believe that's only a variant of reporter#s problem.

Was ok with "LOdev 3.6.0alpha0+  English UI/Locale [Build ID: 9518535-d09cf17-8a74106-c695ecd-16afab (libreoffice-3-5-branch-point)]"  {Win-x86@9-Voreppe Win32 pull time 2012-02-29 04:21:51}. OS: German WIN7 Home Premium (64bit)  

May be bibisecting can help?

@Ivan:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf.
Comment 2 Ivan Timofeev (retired) 2012-06-29 00:26:28 UTC
looks like a regression from 
http://cgit.freedesktop.org/libreoffice/core/commit/?id=85bdc19fcb6a1a71d6aef0f00b8610f4b85e5a00
Comment 3 Ivan Timofeev (retired) 2012-06-29 00:54:42 UTC
Fixed with commit bb7f52e9fc4fc692f14d76aee6e0a141ad864a3b
Comment 4 Jean-Baptiste Faure 2012-06-29 01:28:20 UTC
(In reply to comment #3)
> Fixed with commit bb7f52e9fc4fc692f14d76aee6e0a141ad864a3b

Great !. Fix verified in Version 3.6.0.0.beta2+ (Build ID: a64ea3c).
Thank you very much. :-)
JBF