fdo#51543: fix incomplete slide number info in status bar

Change-Id: I73cdd236a9e167fb812b0e2c0922df5bd3e2537b